fix col-80 on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,9 @@ footer{
         padding-left: 10px;
         font-size: 30px;
     }
+    .col-80{
+        flex: 0 100%;
+    }
 }
 
 
@@ -340,7 +343,7 @@ footer{
     }
     .main-heading{
         font-size: 30px;
-        flex: 0 35%;
+        flex: 0 100%;
     }
     .work-heading h4{
         font-size: 20px;
